fix button alignement

--- a/src/app/core/components/empty-dialog/empty-dialog.component.scss
+++ b/src/app/core/components/empty-dialog/empty-dialog.component.scss
@@ -1,5 +1,8 @@
+.top-buttons-div {
+    display: flex;
+    justify-content: right;
+}
 .edit-button {
-    margin-left: auto;
     margin-bottom: 20px;
     width: fit-content;
 }
